[gd_scene load_steps=16 format=3 uid="uid://b7ifdt5hcdjb8"]

[ext_resource type="Script" uid="uid://bcy143bfyrruo" path="res://scenes/player/player_hand.gd" id="1_50b80"]
[ext_resource type="Script" uid="uid://cn2nfmdik6f0v" path="res://scenes/player/input_manager.gd" id="2_twfmb"]
[ext_resource type="Texture2D" uid="uid://cp4iq5fd6j8be" path="res://art/background.png" id="3_rnrmy"]
[ext_resource type="Script" uid="uid://bty8228mbp4mr" path="res://scenes/card/deck.gd" id="4_tgvfh"]
[ext_resource type="Texture2D" uid="uid://dlapp75shcsrg" path="res://Cards/Deck.png" id="5_qqcb7"]
[ext_resource type="Theme" uid="uid://bexwcxv8tsvxx" path="res://custom_resources/pixel_theme.tres" id="6_l3mi3"]
[ext_resource type="PackedScene" uid="uid://v65sweb65wh" path="res://scenes/card/cardslot.tscn" id="7_c06d8"]
[ext_resource type="Script" uid="uid://wrkrwvu00sun" path="res://scenes/card/cardslot.gd" id="8_yh840"]
[ext_resource type="Texture2D" uid="uid://b1tx3ipc0rtl6" path="res://Cards/Vacuum_boss.png" id="9_gpn8j"]
[ext_resource type="Script" uid="uid://nrqhns78ljqf" path="res://scenes/battle/switch_hand.gd" id="10_fqvpf"]
[ext_resource type="Script" uid="uid://dbpol38hmfa5t" path="res://scenes/card/ingredient_card/ingredient_card_manager.gd" id="11_4tgsm"]
[ext_resource type="Script" uid="uid://cm5fblon3lnjk" path="res://scenes/card/monster_card/monster_card_manager.gd" id="12_x6sjr"]
[ext_resource type="Script" uid="uid://waqufgaxshwe" path="res://scenes/card/cooking_mechanic.gd" id="13_8ijet"]
[ext_resource type="Script" uid="uid://buewu6digva8u" path="res://scenes/battle/battle_manager.gd" id="14_gne0d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxe8n"]
size = Vector2(18, 26)

[node name="battle" type="Node2D"]

[node name="Player" type="Node" parent="."]

[node name="PlayerHand" type="Node2D" parent="Player"]
position = Vector2(15, 126)
script = ExtResource("1_50b80")

[node name="InputManager" type="Node2D" parent="Player" node_paths=PackedStringArray("player_hand")]
script = ExtResource("2_twfmb")
player_hand = NodePath("../PlayerHand")

[node name="PlayerHealth" type="RichTextLabel" parent="Player"]
offset_left = 4.0
offset_top = 43.0
offset_right = 44.0
offset_bottom = 83.0
text = "0"

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.513233, 0.513233, 0.513233, 1)
z_index = -3
texture = ExtResource("3_rnrmy")
centered = false

[node name="Deck" type="Node2D" parent="."]
position = Vector2(15, 126)
script = ExtResource("4_tgvfh")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
z_index = -2
position = Vector2(9.53674e-07, 0)
scale = Vector2(0.102778, 0.1)
texture = ExtResource("5_qqcb7")

[node name="Area2D" type="Area2D" parent="Deck"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
shape = SubResource("RectangleShape2D_mxe8n")

[node name="RichTextLabel" type="RichTextLabel" parent="Deck"]
z_index = -2
offset_left = -7.0
offset_top = -7.0
offset_right = 6.0
offset_bottom = 6.0
theme = ExtResource("6_l3mi3")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cardslots" type="Node" parent="."]

[node name="Cardslot" parent="Cardslots" instance=ExtResource("7_c06d8")]
position = Vector2(87, 76)
script = ExtResource("8_yh840")

[node name="Cardslot2" parent="Cardslots" instance=ExtResource("7_c06d8")]
position = Vector2(58, 94)
script = ExtResource("8_yh840")

[node name="Cardslot3" parent="Cardslots" instance=ExtResource("7_c06d8")]
position = Vector2(58, 56)
script = ExtResource("8_yh840")

[node name="Enemy" type="Sprite2D" parent="."]
position = Vector2(214.5, 77)
scale = Vector2(0.125, 0.120438)
texture = ExtResource("9_gpn8j")

[node name="EndTurnButton" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 211.0
offset_top = 127.0
offset_right = 255.0
offset_bottom = 141.0
grow_horizontal = 2
focus_mode = 0
theme = ExtResource("6_l3mi3")
theme_override_font_sizes/font_size = 6
text = "End Turn
"

[node name="CookButton" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 211.0
offset_top = 111.0
offset_right = 255.0
offset_bottom = 125.0
grow_horizontal = 2
focus_mode = 0
theme = ExtResource("6_l3mi3")
theme_override_font_sizes/font_size = 6
text = "Cook
"

[node name="Win" type="Label" parent="."]
visible = false
z_index = 3
offset_left = -24.0
offset_top = 36.0
offset_right = 284.0
offset_bottom = 113.0
theme_override_colors/font_color = Color(0.690196, 0.788235, 0, 1)
theme_override_font_sizes/font_size = 42
text = "YOU WIN !!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lose" type="Label" parent="."]
visible = false
z_index = 3
offset_left = -33.0
offset_top = 36.0
offset_right = 275.0
offset_bottom = 113.0
theme_override_colors/font_color = Color(0.690196, 0.788235, 0, 1)
theme_override_font_sizes/font_size = 42
text = "YOU  LOSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BossAttack" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 196.0
offset_top = 48.0
offset_right = 217.0
offset_bottom = 73.0
scale = Vector2(0.25, 0.25)
text = "0"
horizontal_alignment = 1

[node name="BossHealth" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 230.0
offset_top = 48.0
offset_right = 255.0
offset_bottom = 73.0
scale = Vector2(0.25, 0.25)
text = "0"

[node name="BattleTimer" type="Timer" parent="."]
one_shot = true

[node name="SwitchHand" type="Button" parent="." node_paths=PackedStringArray("ingredient_card_manager", "monster_card_manager", "player_hand")]
offset_left = 25.0
offset_top = 130.0
offset_right = 41.0
offset_bottom = 144.0
focus_mode = 0
theme = ExtResource("6_l3mi3")
theme_override_font_sizes/font_size = 6
text = "SH"
script = ExtResource("10_fqvpf")
ingredient_card_manager = NodePath("../IngredientCardManager")
monster_card_manager = NodePath("../MonsterCardManager")
player_hand = NodePath("../Player/PlayerHand")

[node name="IngredientCardManager" type="Node2D" parent="."]
position = Vector2(15, 126)
script = ExtResource("11_4tgsm")

[node name="MonsterCardManager" type="Node2D" parent="."]
visible = false
position = Vector2(15, 126)
script = ExtResource("12_x6sjr")

[node name="CookingMechanic" type="Node" parent="."]
script = ExtResource("13_8ijet")

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("14_gne0d")

[connection signal="pressed" from="EndTurnButton" to="BattleManager" method="_on_end_turn_button_pressed"]
[connection signal="button_down" from="CookButton" to="CookingMechanic" method="_on_cook"]
[connection signal="button_down" from="SwitchHand" to="SwitchHand" method="_on_switch_hand"]
